[package]
name = "spotify-exporter"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
config = {version = "0.13.4"}
open = {version = "5.0.1"}
chrono = {version = "0.4.31"}
rand = {version = "0.8.5"}
base64 = "0.22.1"
zip = "6.0.0"
clap = { version = "4.5.50", features = ["derive"] }
sha2 = "0.10.9"
